tests/invalid/bad_statevar_bad_context.err_exp
bad_statevar_bad_context.m:031: Error: state variable !.A is not visible in
bad_statevar_bad_context.m:031:   this context.
bad_statevar_bad_context.m:031: In clause for predicate `test_pred'/4:
bad_statevar_bad_context.m:031:   in argument 3 of functor `f/3':
bad_statevar_bad_context.m:031:   type error in unification of variable `V_13'
bad_statevar_bad_context.m:031:   and variable `A'.
bad_statevar_bad_context.m:031:   `V_13' has type
bad_statevar_bad_context.m:031:     float,
bad_statevar_bad_context.m:031:   `A' has type
bad_statevar_bad_context.m:031:     int.
For more information, recompile with `-E'.
